--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,10 @@ Flask-Minify==0.37
 flask-dance==7.0.0
 blinker==1.6.2
 
+pandas==1.3.5
+matplotlib==3.5.1
+nltk==3.6.7
+openpyxl==3.0.9
+
 # flask_mysqldb
 # psycopg2-binary
