--- a/apps/static/assets/package.json
+++ b/apps/static/assets/package.json
@@ -29,6 +29,7 @@
     "license": "https://github.com/themesberg/volt-bootstrap-5-dashboard/blob/master/LICENSE.md",
     "dependencies": {
         "@popperjs/core": "^2.9.2",
+        "@themesberg/volt-bootstrap-5-dashboard": "file:",
         "bootstrap": "^5.0.2",
         "chartist": "^0.11.4",
         "chartist-plugin-tooltips": "^0.0.17",
@@ -48,7 +49,6 @@
         "gulp-autoprefixer": "^8.0.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-cssbeautify": "^3.0.0",
-        "node-sass": "^6.0.1",
         "gulp-file-include": "^2.3.0",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
@@ -59,6 +59,7 @@
         "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify": "^3.0.2",
         "gulp-wait": "^0.0.2",
-        "merge-stream": "^2.0.0"
+        "merge-stream": "^2.0.0",
+        "node-sass": "^6.0.1"
     }
 }
