--- a/apps/webApp/package.json
+++ b/apps/webApp/package.json
@@ -13,6 +13,7 @@
         "primeicons": "^6.0.1",
         "primevue": "^4.2.2",
         "vue": "^3.4.34",
+        "vue-axios": "^3.5.2",
         "vue-router": "^4.4.0"
     },
     "devDependencies": {
@@ -26,6 +27,7 @@
         "postcss": "^8.4.40",
         "prettier": "^3.2.5",
         "sass": "^1.55.0",
+        "tailwind-plugin-ripple-effect": "^0.0.5",
         "tailwindcss": "^3.4.6",
         "tailwindcss-primeui": "^0.3.2",
         "unplugin-vue-components": "^0.27.3",
